--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 190px;
+  margin-top: 11.875rem;
 
 }
 
 .heading {
   position: absolute;
   display: block;
-  top: 10px;
+  top: 0.625rem;
 }
